--- a/frontend2/index.html
+++ b/frontend2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RootsReach E-commerce Marketplace Landing Page</title>
+    <title>RootsReach</title>
   </head>
   <body>
     <div id="root"></div>
